--- a/.github/workflows/build-multi-platform.yml
+++ b/.github/workflows/build-multi-platform.yml
@@ -29,7 +29,7 @@ jobs:
           pip install pyinstaller
 
       - name: Build Windows Executable
-        run: pyinstaller --onefile --name program.exe your_program.py
+        run: pyinstaller --onefile --name libretranslateGUI.exe main.py
 
       - name: Upload Windows Executable
         uses: actions/upload-artifact@v3
@@ -56,7 +56,7 @@ jobs:
           pip install pyinstaller
 
       - name: Build Linux Executable
-        run: pyinstaller --onefile --name program your_program.py
+        run: pyinstaller --onefile --name libretranslateGUI main.py
 
       - name: Upload Linux Executable
         uses: actions/upload-artifact@v3
