--- a/.github/workflows/build-multi-platform.yml
+++ b/.github/workflows/build-multi-platform.yml
@@ -29,13 +29,13 @@ jobs:
           pip install pyinstaller
 
       - name: Build Windows Executable
-        run: pyinstaller --onefile --name libretranslateGUI.exe main.py
+        run: pyinstaller --onefile --name LibreTranslateGUI.exe main.py
 
       - name: Upload Windows Executable
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: Windows-Executable
-          path: dist/libretranslateGUI.exe
+          path: dist/LibreTranslateGUI.exe
 
   # Build on Linux
   build-linux:
@@ -56,10 +56,10 @@ jobs:
           pip install pyinstaller
 
       - name: Build Linux Executable
-        run: pyinstaller --onefile --name libretranslateGUI main.py
+        run: pyinstaller --onefile --name LibreTranslateGUI main.py
 
       - name: Upload Linux Executable
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: Linux-Executable
-          path: dist/libretranslateGUI
+          path: dist/LibreTranslateGUI
