--- a/.github/workflows/build-multi-platform.yml
+++ b/.github/workflows/build-multi-platform.yml
@@ -13,12 +13,23 @@ jobs:
   # Build on Windows
   build-windows:
     runs-on: windows-latest
+    if: |
+      contains(github.event.head_commit.message, '!build-all') ||
+      contains(github.event.head_commit.message, '!build-windows') ||
+      (
+        startsWith(github.event_name, 'pull_request') &&
+        (
+          contains(github.event.pull_request.head.commit.message, '!build-all') ||
+          contains(github.event.pull_request.head.commit.message, '!build-windows')
+        )
+      )
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.12.5'
 
@@ -41,12 +52,22 @@ jobs:
   # Build on Linux
   build-linux:
     runs-on: ubuntu-latest
+    if: |
+      contains(github.event.head_commit.message, '!build-all') ||
+      contains(github.event.head_commit.message, '!build-windows') ||
+      (
+        startsWith(github.event_name, 'pull_request') &&
+        (
+          contains(github.event.pull_request.head.commit.message, '!build-all') ||
+          contains(github.event.pull_request.head.commit.message, '!build-windows')
+        )
+      )
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.12.5'
 
